Added more diverse prompt to ru human messages

--- a/config/config_generate_human_messages.yaml
+++ b/config/config_generate_human_messages.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - user_settings: user_settings
   - hydra: base
-  - llm: local
+  - llm: caila_gpt_5_nano
   - human_message_prompts: ru
 
 project_path: ${user_settings.project_path}
