--- a/config/human_message_prompts/ru.yaml
+++ b/config/human_message_prompts/ru.yaml
@@ -1,20 +1,18 @@
-system_prompt: "Ты дружелюбный помощник, который пишет короткие сообщения в мессенджерах на живом разговорном русском языке."
+system_prompt: "Ты помощник, который пишет короткие сообщения в мессенджерах на живом разговорном русском языке."
 user_prompts_for_generation:
   - "Напиши непринуждённое сообщение другу о том, как прошёл день."
   - "Составь короткое напоминание в чате коллеге, что созвон вечером не отменяется."
-  - "Сымитируй голосовое, в котором кто-то рассказывает, что застрял в пробке."
-  - "Напиши сообщение о планах на выходные с родителями, максимум две фразы."
   - "Придумай SMS, где человек извиняется за опоздание на пять минут."
   - "Сделай сообщение с лёгким раздражением из-за шумных соседей, но без грубостей."
+  - "Напиши раздраженное сообщение, вызванное конфликтом на работе."
   - "Напиши ободряющий текст другу, который только что завалил экзамен."
-  - "Сочини короткий апдейт в стиле Slack после тренировки в спортзале."
-  - "Сделай сообщение, начинающееся словами 'Ну что, угадай', без смайлов."
-  - "Напиши ночной месседж другу в другом часовом поясе, используй вопрос и хэштег."
+  - "Сочини сообщение в рабочем чате в Slack после очередной встречи."
+  - "Напиши сообщение, которое могло бы появиться в середине политического спора."
+  - "Напиши сообщение, в котором человек жалуется на тяжелое финансовое состояние."
   - "Составь сообщение о планах взять кофе по дороге на работу, не больше 20 слов."
   - "Придумай напоминание оплатить коммуналку до полуночи, без эмодзи."
-  - "Сделай разговорное сообщение о том, что дождь сорвал прогулку c собакой."
-  - "Напиши милое предложение встретиться за уличной едой после работы."
-  - "Сочини сообщение, где каждый раз заканчивается восклицательным знаком."
-  - "Сделай короткую заметку для семейного чата о воскресном бранче."
-  - "Придумай сообщение, где человек делится, что купил билеты мечты."
+  - "Сочини сообщение, где каждое предложение заканчивается восклицательным знаком."
+  - "Напиши сообщение, в котором человек приветствует читателей своего телеграм-канала."
+  - "Напиши сообщение, в котором человек желает читателям своего телеграм-канала хорошего дня или хорошей ночи."
+  - "Придумай воодушевляющее и мотивирующее сообщение, которое человек мог бы отправить читателям своего телеграм-канала."
   - "Составь сообщение для друга, который только проснулся и просит кофе."
